Fixed: Text being too squished into the user icon

--- a/site-sass/components/comments.scss
+++ b/site-sass/components/comments.scss
@@ -160,7 +160,7 @@
   margin-left: 100px;
 
   @include mq($until:tablet) {
-    margin-left: 50px;
+    margin-left: 70px;
   }
 
   li:first-child cite a{
